<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#DEDEDC">

        <ImageView
            android:src="@drawable/creator"
            android:id="@+id/creator"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:layout_weight="3"/>

        <TextView
            android:id="@+id/com_name"
            android:text="@string/com_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title_size"
            android:layout_marginLeft="@dimen/title_margin"
            android:layout_marginTop="@dimen/title_marginTop"
            android:fontFamily="sans-serif-condensed"
            android:layout_gravity="center_vertical"
            android:layout_weight="0"/>
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/address_icon"
                android:src="@drawable/address"
                style="@style/icon_style" />
            <TextView
                android:id="@+id/com_address"
                android:text="@string/com_address"
                style="@style/text_style" />
        </LinearLayout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/phone_num_icon"
            android:src="@drawable/phone_number"
            style="@style/icon_style" />
        <TextView
            android:id="@+id/com_phone_num"
            android:text="@string/com_phone_num"
            style="@style/text_style"/>
    </LinearLayout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/website_icon"
            android:src="@drawable/website"
            style="@style/icon_style" />
        <TextView
            android:id="@+id/com_website"
            android:text="@string/com_website"
            style="@style/text_style"/>
    </LinearLayout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/describe_icon"
            android:src="@drawable/descibe"
            style="@style/icon_style" />

        <TextView
            android:id="@+id/com_describe"
            android:text="@string/com_describe"
            style="@style/text_style"/>

    </LinearLayout>
    </LinearLayout>